--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -65,8 +65,8 @@ code
   height : 100%
   background : black
   display : flex
-  padding-top : 1%
-  padding-bottom : 1%
+  padding-top : 2%
+  padding-bottom : 2%
   font-size : 100%
   *
     margin : auto 
@@ -89,17 +89,45 @@ code
   padding-top : 2%
   padding-bottom : 2% 
   font-size : 60% 
+  transition : 0.3s ease-in-out
+  *
+    transition : 0.3s ease-in-out
   .accordion
     width : 100%
     .accordionbutton
       width : 100%
-      height : 8%
+      height : 50px
       background : $LightBlack
-      display : flex
-      width : auto 
+      display : grid
+      grid-template-columns : 10% 10% 75% 5% 
+      *
+        margin : auto
+      .tit
+        margin-left : 0
+      .ti
+        width : 100%
+        height : 100%  
+        text-align : center
+        vertical-align : middle
+        justify-content : center 
+        background : $BlackBack
+        padding : auto 
       img
         object-fit : cover
         height : 30px 
+      &:hover
+        background : $BlackBack 
+        cursor : pointer
     .accordpanel
-      display : none
+      transition : 0.3s ease-in-out
+      width : 100%
+      max-height : 0
+      margin : auto
+      background : $LightBlack
       height : auto
+      overflow : hidden;
+      p
+        color : $border
+        width : 100%
+        margin-left : 20%
+        font-size : 150% 
