--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -17,6 +17,7 @@ body
   margin : 0
   background : $BlackBack
   overflow-x : hidden 
+  transition : 0.3s ease-in-out
 html
   margin : 0 
 code
@@ -86,8 +87,8 @@ code
   display : flex
   flex-direction : column 
   align-items : top 
-  padding-top : 2%
-  padding-bottom : 2% 
+  padding-top : 3%
+  padding-bottom : 3% 
   font-size : 60% 
   transition : 0.3s ease-in-out
   *
@@ -100,6 +101,7 @@ code
       background : $LightBlack
       display : grid
       grid-template-columns : 10% 10% 75% 5% 
+      border-top : solid  3px black
       *
         margin : auto
       .tit
@@ -107,11 +109,10 @@ code
       .ti
         width : 100%
         height : 100%  
+        display : flex
         text-align : center
         vertical-align : middle
-        justify-content : center 
         background : $BlackBack
-        padding : auto 
       img
         object-fit : cover
         height : 30px 
@@ -129,5 +130,6 @@ code
       p
         color : $border
         width : 100%
+        line-height : 200% 
         margin-left : 20%
         font-size : 150% 
